[gd_scene load_steps=19 format=2]

[ext_resource path="res://interface/profile/UserProfile.gd" type="Script" id=1]
[ext_resource path="res://Mockups/4.jpeg" type="Texture" id=2]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://interface/rooms/Camada 14 copiar 13.png" type="Texture" id=4]
[ext_resource path="res://interface/rooms/Camada 15 copiar.png" type="Texture" id=5]
[ext_resource path="res://interface/rooms/Camada 1872.png" type="Texture" id=6]
[ext_resource path="res://interface/rooms/Camada 1869.png" type="Texture" id=7]
[ext_resource path="res://interface/rooms/Camada 1874.png" type="Texture" id=8]
[ext_resource path="res://interface/rooms/Camada 1870.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Adao_selected.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Cida_selected.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Vital_selected.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Xereta_selected.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Ze Plenarinho_selected.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Legis_selected.png" type="Texture" id=15]
[ext_resource path="res://interface/rooms/Camada 146 copiar.png" type="Texture" id=16]
[ext_resource path="res://interface/rooms/Camada 1871.png" type="Texture" id=17]
[ext_resource path="res://interface/rooms/Camada 1877.png" type="Texture" id=18]

[node name="UserProfile" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -434.0
margin_top = 62.0
margin_right = 434.0
margin_bottom = 283.0
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 267.0
margin_top = 59.0
margin_right = -9.0
margin_bottom = -7.0
custom_fonts/font = ExtResource( 3 )
text = "Escolha seu Personagem"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_top = 0.195
anchor_right = 0.954
anchor_bottom = 0.957
margin_left = 50.0
margin_top = 0.599976
margin_right = -0.320068
margin_bottom = 0.559937
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer2"]
margin_right = 980.0
margin_bottom = 1370.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="legisBtn" type="TextureButton" parent="VBoxContainer2/GridContainer"]
margin_right = 488.0
margin_bottom = 454.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2/GridContainer/legisBtn"]
margin_left = 73.0
margin_top = 36.0
margin_right = 382.0
margin_bottom = 409.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="TextureRect" parent="VBoxContainer2/GridContainer/legisBtn/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.5
margin_top = -211.5
margin_right = 203.5
margin_bottom = 190.5
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZeBtn" type="TextureButton" parent="VBoxContainer2/GridContainer"]
margin_left = 492.0
margin_right = 980.0
margin_bottom = 454.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 14 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2/GridContainer/ZeBtn"]
margin_left = 106.0
margin_top = 40.0
margin_right = 375.0
margin_bottom = 409.0
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="TextureRect" parent="VBoxContainer2/GridContainer/ZeBtn/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.5
margin_top = -211.5
margin_right = 200.5
margin_bottom = 190.5
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VitalBtn" type="TextureButton" parent="VBoxContainer2/GridContainer"]
margin_top = 458.0
margin_right = 488.0
margin_bottom = 912.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="VitalPic" type="TextureRect" parent="VBoxContainer2/GridContainer/VitalBtn"]
margin_left = 81.0
margin_top = 44.0
margin_right = 381.0
margin_bottom = 413.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="TextureRect" parent="VBoxContainer2/GridContainer/VitalBtn/VitalPic"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -217.5
margin_right = 202.0
margin_bottom = 184.5
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XeretaBtn" type="TextureButton" parent="VBoxContainer2/GridContainer"]
margin_left = 492.0
margin_top = 458.0
margin_right = 980.0
margin_bottom = 912.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="XeretaPic" type="TextureRect" parent="VBoxContainer2/GridContainer/XeretaBtn"]
margin_left = 76.0
margin_top = 54.0
margin_right = 394.0
margin_bottom = 411.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="TextureRect" parent="VBoxContainer2/GridContainer/XeretaBtn/XeretaPic"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -224.5
margin_right = 197.0
margin_bottom = 177.5
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CidaBtn" type="TextureButton" parent="VBoxContainer2/GridContainer"]
margin_top = 916.0
margin_right = 488.0
margin_bottom = 1370.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2/GridContainer/CidaBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 116.0
margin_top = 28.0
margin_right = 116.0
margin_bottom = 28.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="TextureRect" parent="VBoxContainer2/GridContainer/CidaBtn/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -333.0
margin_top = -243.0
margin_right = 69.0
margin_bottom = 159.0
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdaoBtn" type="TextureButton" parent="VBoxContainer2/GridContainer"]
margin_left = 492.0
margin_top = 916.0
margin_right = 980.0
margin_bottom = 1370.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="AdaoPic" type="TextureRect" parent="VBoxContainer2/GridContainer/AdaoBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 39.0
margin_top = 64.0
margin_right = 39.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="TextureRect" parent="VBoxContainer2/GridContainer/AdaoBtn/AdaoPic"]
margin_left = -13.0
margin_top = -52.0
margin_right = 389.0
margin_bottom = 350.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="ConfirmButton" type="Button" parent="VBoxContainer2"]
anchor_top = 0.0396446
anchor_bottom = 0.0396446
margin_left = 349.0
margin_top = 1385.0
margin_right = 630.0
margin_bottom = 1463.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "CONFIRMAR"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="MOCKUP" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[connection signal="pressed" from="VBoxContainer2/GridContainer/legisBtn" to="." method="_on_legisBtn_pressed"]
[connection signal="pressed" from="VBoxContainer2/GridContainer/ZeBtn" to="." method="_on_ZeBtn_pressed"]
[connection signal="pressed" from="VBoxContainer2/GridContainer/VitalBtn" to="." method="_on_VitalBtn_pressed"]
[connection signal="pressed" from="VBoxContainer2/GridContainer/XeretaBtn" to="." method="_on_XeretaBtn_pressed"]
[connection signal="pressed" from="VBoxContainer2/GridContainer/CidaBtn" to="." method="_on_CidaBtn_pressed"]
[connection signal="pressed" from="VBoxContainer2/GridContainer/AdaoBtn" to="." method="_on_AdaoBtn_pressed"]
[connection signal="pressed" from="VBoxContainer2/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
